[gd_scene load_steps=5 format=3 uid="uid://8gccdk4tlqem"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_ne8bo"]
[ext_resource type="PackedScene" uid="uid://0lnmg8dm72kj" path="res://scenes/best_time_save.tscn" id="2_i3hgu"]

[sub_resource type="InputEventKey" id="InputEventKey_3tv78"]
pressed = true
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_4hdxp"]
events = [SubResource("InputEventKey_3tv78")]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ne8bo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 20.0
offset_bottom = 40.0
grow_horizontal = 2
focus_mode = 0
text = "Restart"

[node name="Time Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 50.0
offset_bottom = 70.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = 280.0
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer2" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer3" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer4" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer5" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer6" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer7" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer8" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="GridContainer9" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="PencilModeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
shortcut = SubResource("Shortcut_4hdxp")
text = "Pencil Mode"

[node name="ShadePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="Label" type="Label" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2
text = "You win"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
text = "Play Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time Label" type="Label" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Play Again"

[node name="ShowSudokuButton" type="Button" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Show Sudoku"

[node name="Label3" type="Label" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "Best Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTimeLabel" type="Label" parent="WinRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2

[node name="BestTimeSave" parent="." instance=ExtResource("2_i3hgu")]

[node name="LevelRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LevelRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="toggled" from="HBoxContainer/PencilModeButton" to="." method="_on_pencil_mode_button_toggled"]
[connection signal="pressed" from="WinRect/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinRect/ShowSudokuButton" to="." method="_on_show_sudoku_button_pressed"]
